--- a/Tcm.Interface.WebUi/src/app/shared/component/header/header.component.html
+++ b/Tcm.Interface.WebUi/src/app/shared/component/header/header.component.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link"  routerLink="/corporate/add"  href="about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="services.html">Services</a>
