--- a/Tcm.Interface.WebUi/src/app/shared/component/login/login.component.html
+++ b/Tcm.Interface.WebUi/src/app/shared/component/login/login.component.html
@@ -1,4 +1,5 @@
 
 
+<ng-container *ngIf=""></ng-container>
 <a class="navbar-brand text-uppercase" *ngIf='this.authenticated'  (click)="logout()"> <span class="label label-success text-capitalize">خروج</span></a>
 <a class="navbar-brand text-uppercase text-white" *ngIf='!this.authenticated' (click)="login()"> <span class="label label-success text-capitalize ">ورود</span></a>
