--- a/Tcm.Interface.WebUi/src/app/app.component.html
+++ b/Tcm.Interface.WebUi/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-header></app-header>
-
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
+<ngx-sample-layout>
+    <nb-menu [items]="menu"></nb-menu>
+    <router-outlet></router-outlet>
+</ngx-sample-layout>
