--- a/Tcm.Interface.WebUi/src/app/theme/components/header/header.component.html
+++ b/Tcm.Interface.WebUi/src/app/theme/components/header/header.component.html
@@ -7,9 +7,9 @@
 
 <div class="header-container">
   
-    <a class="control-item nb-notifications" style='font-size:2em;margin:0 10px'></a>
-    <a class="control-item nb-email" style='font-size:2em;margin:0 10px'></a>
-    <a class="control-item nb-search" style='font-size:2em;margin:0 10px'></a>
+    <a class="control-item nb-notifications" style='font-size:2em;margin:0 10px;border-right: 1px solid #3f4550;padding-right:14px;'></a>
+    <a class="control-item nb-email" style='font-size:2em;margin:0 10px;border-right: 1px solid #3f4550;padding-right:14px;'></a>
+    <a class="control-item nb-search" style='font-size:2em;margin:0 10px;border-right: 1px solid #3f4550;padding-right:14px;'></a>
 
   <!-- <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-notification"></i></a> -->
 </div>
