Create login-register Components

--- a/Tcm.Interface.WebUi/src/app/pages/Auth/login/login.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/Auth/login/login.component.html
@@ -1,3 +1,20 @@
-<p>
-  login works!
-</p>
+<div class="col-md-6">
+  <nb-card>
+    <nb-card-header>ورود</nb-card-header>
+    <nb-card-body>
+      <form>
+        <div class="form-group">
+          <label for="txtUserName">نام کاربری</label>
+          <input class="form-control" id="txtUserName">
+        </div>
+        <div class="form-group">
+          <label for="txtPassword">رمز عبور</label>
+          <input type="password" class="form-control" id="txtPassword">
+        </div>
+        <div class="form-group">
+          <nb-checkbox>مرا بخاطر بسپار</nb-checkbox>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">ورود</button>
+      </form>
+    </nb-card-body>
+  </nb-card>
