--- a/Tcm.Interface.WebUi/src/app/pages/Auth/register/register.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/Auth/register/register.component.html
@@ -1,3 +1,17 @@
-<p>
-  register works!
-</p>
+<div class="col-md-6">
+  <nb-card>
+    <nb-card-header>ثبت نام</nb-card-header>
+    <nb-card-body>
+      <form>
+        <div class="form-group">
+          <label for="txtUserName">نام کاربری</label>
+          <input class="form-control" id="txtUserName">
+        </div>
+        <div class="form-group">
+          <label for="txtPassword">رمز عبور</label>
+          <input type="password" class="form-control" id="txtPassword">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">ثبت نام</button>
+      </form>
+    </nb-card-body>
+  </nb-card>
