--- a/Tcm.Interface.WebUi/src/app/pages/auth/request-password/request-password.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/auth/request-password/request-password.component.html
@@ -1,5 +1,5 @@
-<h1 id="title" class="title">Login</h1>
-<p class="sub-title">Hello! Log in with your email.</p>
+<h1 id="title" class="title">Forgot Password</h1>
+<p class="sub-title">Enter your email address and we’ll send a link to reset your password</p>
 
 <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
   <p class="alert-title"><b>Oh snap!</b></p>
@@ -15,19 +15,19 @@
   </ul>
 </nb-alert>
 
-<form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
+<form (ngSubmit)="requestPass()" #requestPassForm="ngForm" aria-labelledby="title">
 
   <div class="form-control-group">
-    <label class="label" for="input-email">Email address:</label>
+    <label class="label" for="input-email">Enter your email address:</label>
     <input nbInput
-           fullWidth
            [(ngModel)]="user.email"
            #email="ngModel"
-           name="email"
            id="input-email"
+           name="email"
            pattern=".+@.+\..+"
            placeholder="Email address"
            autofocus
+           fullWidth
            [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
            [attr.aria-invalid]="email.invalid && email.touched ? true : null">
     <ng-container *ngIf="email.invalid && email.touched">
@@ -40,34 +40,16 @@
     </ng-container>
   </div>
 
-  <div class="form-control-group">
-    <label class="label" for="input-password">Password:</label>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.password"
-           #password="ngModel"
-           name="password"
-           type="password"
-           id="input-password"
-           placeholder="Password"
-           [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : ''"
-           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
-  </div>
-
-  <div class="form-control-group accept-group">
-    <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Remember me</nb-checkbox>
-    <a class="forgot-password" routerLink="../request-password">Forgot Password?</a>
-  </div>
-
   <button nbButton
           fullWidth
           status="success"
-          [disabled]="submitted || !form.valid"
+          [disabled]="submitted || !requestPassForm.valid"
           [class.btn-pulse]="submitted">
-    Log In
+    Request password
   </button>
 </form>
 
-<section class="another-action" aria-label="Register">
-  Don't have an account? <a class="text-link" routerLink="../register">Register</a>
+<section class="sign-in-or-up" aria-label="Sign in or sign up">
+  <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
+  <p><a routerLink="../register" class="text-link">Register</a></p>
 </section>
