--- a/Tcm.Interface.WebUi/src/app/pages/Auth/register/register.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/Auth/register/register.component.html
@@ -1,17 +1,120 @@
-<div class="col-md-6">
-  <nb-card>
-    <nb-card-header>ثبت نام</nb-card-header>
-    <nb-card-body>
-      <form>
-        <div class="form-group">
-          <label for="txtUserName">نام کاربری</label>
-          <input class="form-control" id="txtUserName">
-        </div>
-        <div class="form-group">
-          <label for="txtPassword">رمز عبور</label>
-          <input type="password" class="form-control" id="txtPassword">
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">ثبت نام</button>
-      </form>
-    </nb-card-body>
-  </nb-card>
+<h1 id="title" class="title">Register</h1>
+
+<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
+  <p class="alert-title"><b>Oh snap!</b></p>
+  <ul class="alert-message-list">
+    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
+  </ul>
+</nb-alert>
+
+<nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
+  <p class="alert-title"><b>Hooray!</b></p>
+  <ul class="alert-message-list">
+    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
+  </ul>
+</nb-alert>
+
+<form (ngSubmit)="register()" #form="ngForm" aria-labelledby="title">
+
+  <div class="form-control-group">
+    <label class="label" for="input-name">Full name:</label>
+    <input nbInput
+           [(ngModel)]="user.fullName"
+           #fullName="ngModel"
+           id="input-name"
+           name="fullName"
+           placeholder="Full name"
+           autofocus
+           fullWidth
+           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
+           [attr.aria-invalid]="fullName.invalid && fullName.touched ? true : null">
+    <ng-container *ngIf="fullName.invalid && fullName.touched">
+      <p class="error-message" *ngIf="fullName.errors?.required">
+        Full name is required!
+      </p>
+      <p class="error-message" *ngIf="fullName.errors?.minlength || fullName.errors?.maxlength">
+        Full name should contains
+        characters
+      </p>
+    </ng-container>
+  </div>
+
+  <div class="form-control-group">
+    <label class="label" for="input-email">Email address:</label>
+    <input nbInput
+           [(ngModel)]="user.email"
+           #email="ngModel"
+           id="input-email"
+           name="email"
+           pattern=".+@.+..+"
+           placeholder="Email address"
+           fullWidth
+           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
+           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
+    <ng-container *ngIf="email.invalid && email.touched">
+      <p class="error-message" *ngIf="email.errors?.required">
+        Email is required!
+      </p>
+      <p class="error-message" *ngIf="email.errors?.pattern">
+        Email should be the real one!
+      </p>
+    </ng-container>
+  </div>
+
+  <div class="form-control-group">
+    <label class="label" for="input-password">Password:</label>
+    <input nbInput
+           [(ngModel)]="user.password"
+           #password="ngModel"
+           type="password"
+           id="input-password"
+           name="password"
+           placeholder="Password"
+           fullWidth
+           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
+           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
+    <ng-container *ngIf="password.invalid && password.touched">
+      <p class="error-message" *ngIf="password.errors?.required">
+        Password is required!
+      </p>
+      <p class="error-message" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+        Password should contains
+        characters
+      </p>
+    </ng-container>
+  </div>
+
+  <div class="form-control-group">
+    <label class="label" for="input-re-password">Repeat password:</label>
+    <input nbInput
+           [(ngModel)]="user.confirmPassword"
+           #rePass="ngModel"
+           type="password"
+           id="input-re-password"
+           name="rePass"
+           placeholder="Confirm Password"
+           fullWidth
+           [status]="email.dirty ? (email.invalid || password.value != rePass.value  ? 'danger' : 'success') : ''"
+           [attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null">
+    <ng-container *ngIf="rePass.invalid && rePass.touched">
+      <p class="error-message" *ngIf="rePass.errors?.required">
+        Password confirmation is required!
+      </p>
+      <p class="error-message" *ngIf="password.value != rePass.value && !rePass.errors?.required">
+        Password does not match the confirm password.
+      </p>
+    </ng-container>
+  </div>
+
+  <button nbButton
+          fullWidth
+          status="success"
+          [disabled]="submitted || !form.valid"
+          [class.btn-pulse]="submitted">
+    Register
+  </button>
+</form>
+
+<section class="another-action" aria-label="Sign in">
+  Already have an account? <a class="text-link" routerLink="../login">Log in</a>
+</section>
