--- a/Tcm.Interface.WebUi/src/app/pages/Auth/login/login.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/Auth/login/login.component.html
@@ -1,73 +1,43 @@
-<h1 id="title" class="title">Login</h1>
-<p class="sub-title">Hello! Log in with your email.</p>
+<nb-card>
+  <!-- <nb-card-header>
+    <nav class="navigation">
+      <a aria-label="Back" class="link" href="#"><i class="icon nb-arrow-thin-left"></i></a></nav>
+  </nb-card-header> -->
+  <nb-card-body>
+    <div class='auth-block'>
+      <div class="ng-star-inserted">
+        <h1 class="title" id="title">ورود</h1>
+        <p class="sub-title">پست الکترونیکی و رمز عبور خود را به دقت وارد نمایید.</p>
 
-<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-  <p class="alert-title"><b>Oh snap!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
-  </ul>
-</nb-alert>
+        <form #form='ngForm' novalidate>
+          <div class="form-control-group">
+            <label class="label" for="input-email">پست الکترونیکی:</label>
+            <input id="input-email" name="email" class="form-control" #email='ngModel'
+              required [(ngModel)]="user.email">
 
-<nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-  <p class="alert-title"><b>Hooray!</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
-  </ul>
-</nb-alert>
+            <p class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)"> Email is required!
+            </p>
 
-<form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
+          </div>
+          <div class="form-control-group">
+            <label class="label">رمز عبور:</label>
+            <input  name="password" type="password" class="form-control"
+              required minlength="4" maxlength="50" [(ngModel)]="user.password" #password="ngModel">
+            <p class="alert alert-danger" *ngIf="password.invalid && (password.dirty || password.touched)"> Email is
+              required! </p>
 
-  <div class="form-control-group">
-    <label class="label" for="input-email">Email address:</label>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.email"
-           #email="ngModel"
-           name="email"
-           id="input-email"
-           pattern=".+@.+\..+"
-           placeholder="Email address"
-           autofocus
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
-           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
-    <ng-container *ngIf="email.invalid && email.touched">
-      <p class="error-message" *ngIf="email.errors?.required">
-        Email is required!
-      </p>
-      <p class="error-message" *ngIf="email.errors?.pattern">
-        Email should be the real one!
-      </p>
-    </ng-container>
-  </div>
+          </div>
+          <div class="form-control-group accept-group">
+            <input type="checkbox" id='rememberme'>
+            <label for="rememberme">مرا بخاطر بسپار</label>
 
-  <div class="form-control-group">
-    <label class="label" for="input-password">Password:</label>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.password"
-           #password="ngModel"
-           name="password"
-           type="password"
-           id="input-password"
-           placeholder="Password"
-           [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : ''"
-           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
-  </div>
+            <a class="forgot-password" [routerLink]="['/Auth/RequestPassword']">رمز عبور خود را فراموش کرده اید؟</a>
+          </div>
+          <!-- <button class="btn-success btn-block btn-disabled" nbbutton [disabled]='!form.valid'> ورود </button> -->
+          <button class="btn btn-success btn-block mb-5">ورود</button>
+        </form>
 
-  <div class="form-control-group accept-group">
-    <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Remember me</nb-checkbox>
-    <a class="forgot-password" routerLink="../request-password">Forgot Password?</a>
-  </div>
-
-  <button nbButton
-          fullWidth
-          status="success"
-          [disabled]="submitted || !form.valid"
-          [class.btn-pulse]="submitted">
-    Log In
-  </button>
-</form>
-
-<section class="another-action" aria-label="Register">
-  Don't have an account? <a class="text-link" routerLink="../register">Register</a>
-</section>
+      </div>
+    </div>
+  </nb-card-body>
+</nb-card>
