add login functionality
ui fixed
educationlevel_educationCourse Still In test Phase

--- a/Tcm.Interface.WebUi/src/app/pages/Auth/login/login.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/Auth/login/login.component.html
@@ -7,34 +7,30 @@
     <div class='auth-block'>
       <div class="ng-star-inserted">
         <h1 class="title" id="title">ورود</h1>
-        <p class="sub-title">پست الکترونیکی و رمز عبور خود را به دقت وارد نمایید.</p>
+        <p class="sub-title">نام کاربری و رمز عبور خود را به دقت وارد نمایید.</p>
 
         <form #form='ngForm' novalidate>
           <div class="form-control-group">
-            <label class="label" for="input-email">پست الکترونیکی:</label>
-            <input id="input-email" name="email" class="form-control" #email='ngModel'
-              required [(ngModel)]="user.email">
-
-            <p class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)"> Email is required!
-            </p>
+            <label class="label" for="input-email">نام کاربری:</label>
+            <input name="userName" class="form-control" #email='ngModel' required [(ngModel)]="user.userName">
 
           </div>
           <div class="form-control-group">
             <label class="label">رمز عبور:</label>
-            <input  name="password" type="password" class="form-control"
-              required minlength="4" maxlength="50" [(ngModel)]="user.password" #password="ngModel">
+            <input name="password" type="password" class="form-control" required minlength="4" maxlength="50"
+              [(ngModel)]="user.password" #password="ngModel">
             <p class="alert alert-danger" *ngIf="password.invalid && (password.dirty || password.touched)"> Email is
               required! </p>
 
           </div>
           <div class="form-control-group accept-group">
-            <input type="checkbox" id='rememberme'>
-            <label for="rememberme">مرا بخاطر بسپار</label>
+
+              <label><input type="checkbox" id='rememberme' /> مرا بخاطر بسپار</label>
 
             <a class="forgot-password" [routerLink]="['/Auth/RequestPassword']">رمز عبور خود را فراموش کرده اید؟</a>
           </div>
           <!-- <button class="btn-success btn-block btn-disabled" nbbutton [disabled]='!form.valid'> ورود </button> -->
-          <button class="btn btn-success btn-block mb-5">ورود</button>
+          <button class="btn btn-success btn-block mb-5" (click)='login()'>ورود</button>
         </form>
 
       </div>
