--- a/Tcm.Interface.WebUi/src/app/corporate/pages/list/corporate-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/corporate/pages/list/corporate-list.component.html
@@ -1,7 +1,10 @@
 
 <ng-container *ngIf="items || items.length !== 0">
 
-        <app-grid [items]="items" editable="true" removable="true"  [dictionary]="dictionary"  [subject]="subject" [pagination]="pagination" (onSort)="sort($event)"  (onRemove)="remove($event)" (onEdit)="edit($event)"  (onPageChanged)="pageChanged($event)" ></app-grid>
+        <app-grid [items]="items" editable="true" removable="true"  [dictionary]="dictionary"  
+                [subject]="subject" [pagination]="pagination" (onSort)="sort($event)"  
+                (onRemove)="remove($event)" (onEdit)="edit($event)"  (onPageChanged)="pageChanged($event)" >
+        </app-grid>
 
 </ng-container>
 
