--- a/Tcm.Interface.WebUi/src/app/theme/components/header/header.component.scss
+++ b/Tcm.Interface.WebUi/src/app/theme/components/header/header.component.scss
@@ -2,6 +2,14 @@
 @import '~bootstrap/scss/mixins/breakpoints';
 @import '~@nebular/theme/styles/global/breakpoints';
 
+.header-item{
+  font-size:2em;margin:0 10px;border-right: 1px solid #3f4550;padding-right:14px;
+}
+
+.userFullName{
+  font-size: 13px;
+}
+
 @include nb-install-component() {
   display: flex;
   justify-content: space-between;
