--- a/Tcm.Interface.WebUi/src/app/theme/styles/styles.scss
+++ b/Tcm.Interface.WebUi/src/app/theme/styles/styles.scss
@@ -52,3 +52,32 @@
   padding: 7px 9px;
   font-size: 11px;
 }
+
+.header-name{
+  font-size: 13px;
+} 
+
+.dropdown{
+  text-align: right;
+}
+
+.dropdown-item {
+  cursor: pointer;
+}
+
+.dropdown-menu{
+  text-align: right;
+  font-size: 12px;
+  right: 0 !important;
+  left: auto !important;
+
+}
+
+.dropdown-item:hover, .dropdown-item:focus {
+  background-color: inherit !important;
+}
+
+.dropdown-item .fa{
+  color:#b1a9da ;
+  margin-left: 8px;
+}
