--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationLevel/pages/list/educationlevel-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationLevel/pages/list/educationlevel-list.component.html
@@ -11,7 +11,7 @@
             <div class="form-group row">
               <label for="txtEmail" class="col-sm-3 col-form-label text-left">عنوان:</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" name="txtEmail" [(ngModel)]="educationLevelItem.name" required>
+                <input type="text" class="form-control" name="txtEmail" [(ngModel)]="educationLevelItem.Name" required>
               </div>
             </div>
 
@@ -29,7 +29,7 @@
 
           <ng-container *ngIf="items && items.length !== 0">
 
-            <app-grid [items]="items" editable="true" removable="true" [dictionary]="dictionary" [subject]="subject"
+            <app-grid [items]="items" [editable]="true" [removable]="true" [dictionary]="dictionary" [subject]="subject"
               [pagination]="pagination" (onSort)="sort($event)" (onRemove)="remove($event)" (onEdit)="edit($event)"
               (onPageChanged)="pageChanged($event)">
             </app-grid>
