--- a/Tcm.Interface.WebUi/src/styles.css
+++ b/Tcm.Interface.WebUi/src/styles.css
@@ -1,30 +1,37 @@
-
-body{
-    margin: 0px;
+body {
+  margin: 0px;
 }
 
 .carousel-item {
-    height: 65vh;
-    min-height: 300px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-  .portfolio-item {
-    margin-bottom: 30px;
-  }
+  height: 65vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
-  .table{
-    font-size: 13px;
-  }
-  
-  .table tr td , .table tr th{
-    vertical-align: middle !important;
-  }
+.portfolio-item {
+  margin-bottom: 30px;
+}
 
-  .tcmgrid button{
-    padding: 8px 10px !important;
-  }
+.table {
+  font-size: 13px;
+}
+
+.table tr td, .table tr th {
+  vertical-align: middle !important;
+}
+
+.tcmgrid button {
+  padding: 8px 10px !important;
+}
+
+.alertify {
+  text-align: right;
+}
+
+.alertify .ajs-body, .alertify .ajs-header {
+  font-family: 'samim';
+}
