--- a/Tcm.Interface.WebUi/src/app/shared/components/bread-crumb/bread-crumb.component.html
+++ b/Tcm.Interface.WebUi/src/app/shared/components/bread-crumb/bread-crumb.component.html
@@ -1,5 +1,5 @@
-<ol class="breadcrumb">
+<!-- <ol class="breadcrumb">
   <li *ngFor="let breadcrumb of breadcrumbs$ | async" class="breadcrumb-item pl-0">
     <a class="ml-2" [routerLink]="[breadcrumb.url]">{{ breadcrumb.label }}</a>
   </li>
-</ol>
+</ol> -->
