--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationCourse/pages/list/educationcourse-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationCourse/pages/list/educationcourse-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
 
     <nb-card>
-      <nb-card-header>مقطع تحصیلی</nb-card-header>
+      <nb-card-header>دوره تحصیلی</nb-card-header>
       <nb-card-body>
 
         <div class="col-md-6 align-top d-inline-block">
@@ -11,7 +11,7 @@
             <div class="form-group row">
               <label for="txtEmail" class="col-sm-3 col-form-label text-left">عنوان:</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" name="txtEmail" [(ngModel)]="educationLevelItem.Name" required>
+                <input type="text" class="form-control" name="txtEmail" [(ngModel)]="educationCourseItem.Name" required>
               </div>
             </div>
 
