--- a/Tcm.Interface.WebUi/src/app/shared/components/appGrid/app-grid.component.html
+++ b/Tcm.Interface.WebUi/src/app/shared/components/appGrid/app-grid.component.html
@@ -1,63 +1,63 @@
+<div class="table-responsive" *ngIf="showGrid">
+        <table class="table table-bordered table-hover customgrid">
+                <thead>
+                        <tr class="text-center">
+                                <th style="width:40px">ردیف</th>
+                                <ng-container *ngFor="let col of dictionary">
+                                        <th (click)="sort(col.Name)">
+                                                {{col.Display}}
+                                        </th>
+
+                                </ng-container>
+
+                                <ng-container *ngIf="editable">
+                                        <th style="width: 100px;text-align: center;">
+                                                ویرایش
+                                        </th>
+                                </ng-container>
+                                <ng-container *ngIf="removable">
+                                        <th style="width: 100px;text-align: center;">
+                                                حذف
+                                        </th>
+                                </ng-container>
+
+                        </tr>
+                </thead>
+                <tbody>
+
+
+                        <ng-container *ngFor="let item of items ; let i = index;">
+                                <tr>
+                                        <td class="text-center">
+                                                {{ ((pagination.currentPage -1 ) * pagination.itemsPerPage) + i + 1 }}</td>
+
+                                        <td *ngFor="let col of dictionary">
+                                                {{item[col.Name]}}
+                                        </td>
+
+                                        <ng-container *ngIf="editable">
+                                                <td class="text-center">
+                                                        <button class="btn btn-sm btn-success" (click)="edit(item)">
+                                                                <i class="fa fa-edit"></i></button>
+                                                </td>
+                                        </ng-container>
+                                        <ng-container *ngIf="removable">
+                                                <td class="text-center">
+                                                        <button class="btn btn-danger btn-sm" (click)="remove(item)">
+                                                                <i class="fa fa-times-circle"></i></button>
+                                                </td>
+                                        </ng-container>
+
+                                </tr>
+                        </ng-container>
 
 
 
 
-  <div class="table-responsive" *ngIf="showGrid">
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr class="text-center">
-                <th >ردیف</th>
-                <ng-container  *ngFor="let col of dictionary">
-                        <th (click)="sort(col.Name)"  >
-                                {{col.Display}}
-                              </th>
-            
-                </ng-container>
-               
-                  <ng-container *ngIf="editable" >
-                        <th>
-                                ویرایش
-                               </th>
-                   </ng-container>
-                   <ng-container *ngIf="removable" >
-                        <th >
-                                حذف
-                               </th>
-                   </ng-container>
+                </tbody>
+        </table>
 
-            </tr>
-        </thead>  
-        <tbody >
-            
-
-        <ng-container *ngFor="let item of items ; let i = index;">
-                <tr>                    
-                    <td>{{ ((pagination.currentPage -1 ) * pagination.itemsPerPage) + i + 1 }}</td>
-                    <td *ngFor="let col of dictionary">
-                            {{item[col.Name]}}
-                   </td>
-
-                   <ng-container *ngIf="editable"  >
-                        <td>
-                                <button class="btn btn-sm" (click)="edit(item)" > ویرایش</button>
-                               </td>
-                   </ng-container>
-                   <ng-container *ngIf="removable" >
-                        <td permission [subject]="subject" task="delete">
-                                <button class="btn btn-sm"  (click)="remove(item)" >حذف</button>
-                               </td>
-                   </ng-container>
-                    
-                </tr>
-        </ng-container>
-
-           
-   
-           
-        </tbody>
-    </table>
- 
 </div>
 <div>
-  <ngb-pagination [collectionSize]="pagination.totalItems" [(page)]="pagination.currentPage"  (pageChange)="pageChanged($event)"></ngb-pagination>
+        <ngb-pagination [collectionSize]="pagination.totalItems" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)"></ngb-pagination>
 </div>
