--- a/Tcm.Interface.WebUi/src/styles.css
+++ b/Tcm.Interface.WebUi/src/styles.css
@@ -1,21 +1,64 @@
 /* You can add global styles to this file, and also import other style files */
 
-
-body{
-    margin: 0px;
-   
+body {
+  margin: 0px;
 }
 
 .carousel-item {
-    height: 65vh;
-    min-height: 300px;
-    background: no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-  .portfolio-item {
-    margin-bottom: 30px;
-  }
+  height: 65vh;
+  min-height: 300px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.portfolio-item {
+  margin-bottom: 30px;
+}
+
+.table tr td, .table tr th {
+  vertical-align: middle;
+}
+
+.btn {
+  cursor: pointer !important;
+}
+
+.btn-group .btn {
+  padding: 7px 9px;
+  font-size: 11px;
+}
+
+.header-name {
+  font-size: 13px;
+}
+
+.dropdown {
+  text-align: right;
+}
+
+.dropdown-item {
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  text-align: right;
+  font-size: 12px;
+  right: 0 !important;
+  left: auto !important;
+}
+
+.dropdown-item:hover, .dropdown-item:focus {
+  background-color: inherit !important;
+}
+
+.dropdown-item .fa {
+  color: #b1a9da;
+  margin-left: 8px;
+}
+
+.customgrid .btn {
+  padding: 6px 9px !important;
+}
