--- a/Tcm.Interface.WebUi/src/styles.css
+++ b/Tcm.Interface.WebUi/src/styles.css
@@ -62,3 +62,11 @@ body {
 .customgrid .btn {
   padding: 6px 9px !important;
 }
+
+select {
+  height: 33px !important;
+}
+
+.form-control {
+  padding: 0.375rem 0.75rem !important;
+}
