--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationLevel/pages/list/educationlevel-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationLevel/pages/list/educationlevel-list.component.html
@@ -9,9 +9,9 @@
 
           <form #f="ngForm" (ngSubmit)="submitForm()" novalidate>
             <div class="form-group row">
-              <label for="txtEmail" class="col-sm-3 col-form-label text-left">عنوان:</label>
+              <label for="name" class="col-sm-3 col-form-label text-left">عنوان:</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" name="txtEmail" [(ngModel)]="educationLevelItem.Name" required>
+                <input type="text" class="form-control" name="name" [(ngModel)]="educationLevelItem.Name" required>
               </div>
             </div>
 
