school(first Phase)
change input.checkbox,radio style
Add GetByEducationCourse
Add GetByEducationLevel
Add GetBySchool

--- a/Tcm.Interface.WebUi/src/app/pages/account/pages/login/login.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/account/pages/login/login.component.html
@@ -23,9 +23,10 @@
               required! </p>
 
           </div>
-          <div class="form-control-group accept-group">
 
-              <label><input type="checkbox" id='rememberme' /> مرا بخاطر بسپار</label>
+          <div class="form-control-group accept-group checkbox">
+
+            <label><input type="checkbox" id='rememberme'/> مرا بخاطر بسپار</label>
 
             <a class="forgot-password" [routerLink]="['/Auth/RequestPassword']">رمز عبور خود را فراموش کرده اید؟</a>
           </div>
