--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationCourse/pages/list/educationcourse-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationCourse/pages/list/educationcourse-list.component.html
@@ -35,7 +35,7 @@
 
               <div class="col-sm-6">
 
-                <label><input type="checkbox" id='rememberme' name="allowAssignMajor" [value]="educationCourseItem.AllowAssignMajor" [(ngModel)]="educationCourseItem.AllowAssignMajor" />
+                <label><input type="checkbox" id='allow' name="allowAssignMajor" [value]="educationCourseItem.AllowAssignMajor" [(ngModel)]="educationCourseItem.AllowAssignMajor" />
                   اجازه ثبت رشته</label>
               </div>
 
