--- a/Tcm.Interface.WebUi/src/styles.css
+++ b/Tcm.Interface.WebUi/src/styles.css
@@ -73,11 +73,11 @@ select {
   font-size: 13px !important;
 }
 
-.ajs-message{
+.ajs-message {
   font-size: 16px;
 }
 
-.grid-empty-row{
+.grid-empty-row {
   width: 100%;
   font-style: italic;
   border: 1px dotted gray;
@@ -88,4 +88,84 @@ select {
 
 nb-card {
   font-size: 13px !important;
+}
+
+input[type=checkbox] {
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 8px !important;
+  border-radius: 6px;
+  display: inline-block;
+  position: relative;
+  height: 20px;
+  vertical-align: bottom;
+  margin-left: 5px;
+}
+
+input[type=checkbox]:active, input[type=checkbox]:checked:active {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+input[type=checkbox]:checked {
+  background-color: #e9ecee;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+  color: #99a1a7;
+}
+
+input[type=checkbox]:checked:after {
+  content: '\2714';
+  font-size: 13px;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  color: #99a1a7;
+}
+
+input[type=checkbox]:focus {
+  outline-color: transparent;
+}
+
+input[type=radio] {
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+  padding: 8px !important;
+  border-radius: 50px;
+  display: inline-block;
+  position: relative;
+  margin-left: 5px;
+}
+
+input[type=radio]:checked:after {
+  content: ' ';
+  width: 12px;
+  height: 12px;
+  border-radius: 50px;
+  position: absolute;
+  top: 2px;
+  background: #99a1a7;
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px;
+  right: 2px;
+  font-size: 32px;
+}
+
+input[type=radio]:checked {
+  background-color: #e9ecee;
+  color: #99a1a7;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1), inset 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+input[type=radio]:active, input[type=radio]:checked:active {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+
+input[type=radio]:focus {
+  outline-color: transparent;
 }
