remove validation style for each component and add globally in styles.css
add dropdown async pipe

--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationCourse/pages/list/educationcourse-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationCourse/pages/list/educationcourse-list.component.html
@@ -16,7 +16,7 @@
 
                 <select class="form-control" name="EducationLevelId" [(ngModel)]="educationCourseItem.EducationLevelId">
                   <option value="0">--- انتخاب کنید ---</option>
-                  <option *ngFor="let item of educationLevelItems" [value]="item.Id">
+                  <option *ngFor="let item of educationLevelItems | async" [value]="item.Id">
                     {{item.Name}}
                   </option>
                 </select>
