--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/schoolSubType/pages/list/schoolsubtype-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/schoolSubType/pages/list/schoolsubtype-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
 
     <nb-card>
-      <nb-card-header>دوره تحصیلی</nb-card-header>
+      <nb-card-header>دسته بندی مدارس</nb-card-header>
       <nb-card-body>
 
         <div class="col-md-6 align-top d-inline-block">
