--- a/Tcm.Interface.WebUi/src/app/pages/school/pages/add/school-add.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/school/pages/add/school-add.component.html
@@ -78,6 +78,46 @@
 
         </div>
 
+        
+        <div class="form-row">
+
+          <div class="form-group col-4">
+            <label>استان:</label>
+
+            <select class="form-control col-7" name="ProvinceId" [(ngModel)]="schoolItem.ProvinceId"
+              (change)="getCity($event.currentTarget.value)">
+              <option value="0">--- انتخاب کنید ---</option>
+              <option *ngFor="let item of provinceItems | async" [value]="item.Id">
+                {{item.Name}}
+              </option>
+            </select>
+
+          </div>
+
+          <div class="form-group col-4">
+            <label>شهر:</label>
+
+            <select class="form-control col-7" name="CityId" [(ngModel)]="schoolItem.CityId"
+              (change)="getRegion($event.currentTarget.value)">
+              <option *ngFor="let item of cityItems | async" [value]="item.Id">
+                {{item.Name}}
+              </option>
+            </select>
+
+          </div>
+
+          <div class="form-group col-4">
+            <label *ngIf="schoolItem.CityId == 329">منطقه:</label>
+
+            <select *ngIf="schoolItem.CityId == 329" class="form-control col-7" name="RegionId" [(ngModel)]="schoolItem.RegionId">
+              <option *ngFor="let item of regionItems | async" [value]="item.Id">
+                {{item.Name}}
+              </option>
+            </select>
+
+          </div>
+        </div>
+
         <div class="form-row">
 
           <div class="form-group col-4">
