--- a/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationLevel/pages/list/educationlevel-list.component.html
+++ b/Tcm.Interface.WebUi/src/app/pages/baseInfo/educationLevel/pages/list/educationlevel-list.component.html
@@ -7,11 +7,11 @@
 
         <div class="col-md-6 align-top d-inline-block">
 
-          <form #f="ngForm" (ngSubmit)="submitForm()" novalidate>
+          <form #f="ngForm" (ngSubmit)="add(item)" novalidate>
             <div class="form-group row">
               <label for="name" class="col-sm-3 col-form-label text-left">عنوان:</label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" name="name" [(ngModel)]="educationLevelItem.Name" required>
+                <input type="text" class="form-control" name="name" [(ngModel)]="item.Name" required>
               </div>
             </div>
 
@@ -27,7 +27,7 @@
         <div class="col-md-6  d-inline-block">
 
           <app-grid [items]="items" [editable]="true" [removable]="true" [dictionary]="dictionary" [subject]="subject"
-            [pagination]="pagination" (onSort)="sort($event)" (onRemove)="remove($event)" (onEdit)="edit($event)"
+            [pagination]="pagination" (onSort)="sort($event)" (onRemove)="remove($event)" (onEdit)="goToEdit($event)"
             (onPageChanged)="pageChanged($event)">
           </app-grid>
 
