--- a/Tcm.Interface.WebUi/src/app/shared/components/appGrid/app-grid.component.html
+++ b/Tcm.Interface.WebUi/src/app/shared/components/appGrid/app-grid.component.html
@@ -27,7 +27,7 @@
                                         </th>
                                 </ng-container> -->
 
-    <ng-container >
+    <ng-container *ngIf="customTasks && customTasks.length>0" >
                                         <th>
                                                عملیات
                                         </th>
